added fragments for sensory function, some icons and implemented data binding for the clinical test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,10 @@
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape" />
         <activity
+            android:name=".view.stimulation.ClinicalTestActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape" />
+        <activity
             android:name=".view.stimulation.StimulationActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape" />
